resources/scss/components/_card.scss
.card {
    @apply rounded shadow bg-white relative overflow-hidden;

    &__body {
        @apply p-6;
    }

    &--primary {
        @apply rounded shadow bg-primary-500;

        > p {
            @apply text-white;
        }
    }

    &--dark {
        @apply rounded shadow bg-black text-white;

        > p {
            @apply text-white;
        }
    }
}

